Rydder opp i koden etter dokumentMal utledelse ble flyttet over til fpsak (#2517)
Rydder opp i koden etter dokumentMal utledelse ble flyttet over til fpsak.